kubernetes/apps/media/plex/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: media
spec:
  ingressClassName: traefik
  rules:
    - host: plex.homelab.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 32400
    - host: 172-20-155-1.6b5c33f01a55480da115a9bf5a4e1638.plex.direct
      websecure:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 32400
