kubernetes/apps/media/plex/ingressroute-tcp.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: plex
  namespace: media
spec:
  entryPoints:
    - plex
  routes:
    - match: HostSNI(`*`)
      services:
        - name: plex
          port: 32400
